# POC-Flask-Middleware

./: README.md  pyproject.toml
requests/: routes.http
src/: app.py  middlewares.py  routes.py
